<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bolt</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bolt_login">userLogin</string>
    <string name="running_time">Time</string>
    <string name="start_run">Start</string>
    <string name="pause_run">Pause</string>
    <string name="calories_burned">Cal. Burned</string>
    <string name="distance">Distance</string>
    <string name="welcome">Welcome to Bolt!</string>
    <string name="instructions">Please enter username and password below to login to Bolt.</string>
    <string name="user_hint">user@domain</string>
    <string name="password_hint">password</string>
    <string name="user_login">Log In</string>
    <string name="title_activity_run_mode">RunMode</string>
    <string name="title_activity_gpstracker">GPSTracker</string>
    <string name="title_activity_map_test">MapTest</string>

</resources>
