<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android"
    android:orientation="vertical"
    android:padding="30dp" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/instructions"
        android:textColor="#ffffff"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/boltuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="textEmailAddress"
        android:paddingBottom="0dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/boltpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="#ffffff"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/user_login"
        android:textStyle="bold" />

</LinearLayout>