<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/android"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/running_time"
        android:layout_centerInParent="true"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="#007cb33f"
        android:text="@string/start_run"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/runningTime" />

    <TextView
        android:id="@+id/caloriesBurned"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/runDistance"
        android:layout_alignBottom="@+id/runDistance"
        android:layout_toLeftOf="@+id/time"
        android:text="@string/calories_burned"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Chronometer
        android:id="@+id/runningTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:format="%s"
        android:layout_centerHorizontal="true"
        android:textColor="#000000"
        android:textSize="50sp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/caloriesNumber"
        android:layout_marginTop="34dp" />

    <TextView
        android:id="@+id/runDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/runningTime"
        android:layout_toRightOf="@+id/runningTime"
        android:text="@string/distance"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/distanceNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/runDistance"
        android:layout_marginRight="20dp"
        android:layout_marginTop="22dp"
        android:text="distance number here" />

    <TextView
        android:id="@+id/caloriesNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/distanceNumber"
        android:layout_alignBottom="@+id/distanceNumber"
        android:layout_toLeftOf="@+id/runningTime"
        android:text="calorie number here" />

    <Button
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#007cb33f"
        android:gravity="center"
        android:text="@string/pause_run"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/distanceNumber" />
    
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>